[package]
name = "lmt-consensus"
description = "Lapis Monetae consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
lmt-addresses.workspace = true
lmt-consensus-core.workspace = true
lmt-consensus-notify.workspace = true
lmt-consensusmanager.workspace = true
lmt-core.workspace = true
lmt-database.workspace = true
lmt-hashes.workspace = true
lmt-math.workspace = true
lmt-merkle.workspace = true
lmt-muhash.workspace = true
lmt-notify.workspace = true
lmt-pow.workspace = true
lmt-txscript.workspace = true
lmt-txscript-errors.workspace = true
lmt-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
lmt-txscript-errors.workspace = true
lmt-addresses.workspace = true

[[bench]]
name = "parallel_muhash"
harness = false

[[bench]]
name = "check_scripts"
harness = false

[features]
html_reports = []
devnet-prealloc = ["lmt-consensus-core/devnet-prealloc"]

[lints]
workspace = true
