[package]
name = "lmt-mining"
description = "Lapis Monetae mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lmt-addresses.workspace = true
lmt-consensus-core.workspace = true
lmt-consensusmanager.workspace = true
lmt-core.workspace = true
lmt-hashes.workspace = true
lmt-mining-errors.workspace = true
lmt-muhash.workspace = true
lmt-txscript.workspace = true
lmt-utils.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
sweep-bptree = "0.4.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }

[dev-dependencies]
lmt-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
