[package]
name = "rothschild"
description = "Lapis Monetae Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lmt-addresses.workspace = true
lmt-consensus-core.workspace = true
lmt-core.workspace = true
lmt-grpc-client.workspace = true
lmt-notify.workspace = true
lmt-rpc-core.workspace = true
lmt-txscript.workspace = true
lmt-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
