[package]
name = "simpa"
description = "Lapis Monetae Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lmt-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
lmt-consensus-core.workspace = true
lmt-consensus-notify.workspace = true
lmt-consensus.workspace = true
lmt-core.workspace = true
lmt-database.workspace = true
lmt-hashes.workspace = true
lmt-perf-monitor.workspace = true
lmt-utils.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "lmt-alloc/heap"]
semaphore-trace = ["lmt-utils/semaphore-trace"]

[lints]
workspace = true
