[package]
name = "lmt-wasm"
description = "LMT WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
getrandom_0_3.workspace = true
js-sys.workspace = true
lmt-addresses.workspace = true
lmt-bip32.workspace = true
lmt-consensus-core.workspace = true
lmt-consensus-wasm.workspace = true
lmt-core.workspace = true
lmt-math.workspace = true
lmt-pow = { workspace = true, optional = true }
lmt-txscript.workspace = true
lmt-rpc-core.workspace = true
lmt-utils.workspace = true
lmt-wasm-core.workspace = true
lmt-wallet-core.workspace = true
lmt-wallet-keys.workspace = true
lmt-wrpc-client.workspace = true
lmt-wrpc-wasm.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[features] 
wasm32-sdk = [
    "lmt-wallet-core/wasm32-sdk",
    "dep:lmt-pow",
    "lmt-pow/wasm32-sdk",
    "lmt-txscript/wasm32-sdk",
]
wasm32-core = [
    "lmt-wallet-core/wasm32-core",
    "dep:lmt-pow",
    "lmt-pow/wasm32-sdk",
    "lmt-txscript/wasm32-sdk",
]
wasm32-rpc = [
    "lmt-consensus-core/wasm32-sdk",
    "lmt-consensus-wasm/wasm32-sdk",
    "lmt-wrpc-client/wasm32-sdk",
    "lmt-wrpc-wasm/wasm32-sdk",
]
wasm32-keygen = []
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/lmt" },
    { target = "web", out-dir = "web/lmt" }
]
folder = "setup"

# Workaround for Rust 1.87.0
# https://github.com/rust-lang/rust/issues/141048
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O","--enable-bulk-memory"]

[lints]
workspace = true
