[package]
name = "lmt-addressmanager"
description = "Lapis Monetae address manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
borsh.workspace = true
igd-next.workspace = true
itertools.workspace = true
lmt-consensus-core.workspace = true
lmt-core.workspace = true
lmt-database.workspace = true
lmt-utils.workspace = true
local-ip-address.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
rv.workspace = true

[lints]
workspace = true
