[package]
name = "lmt-consensusmanager"
description = "Lapis Monetae consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
lmt-addresses.workspace=true
lmt-consensus-core.workspace = true
lmt-consensus-notify.workspace = true
lmt-core.workspace = true
lmt-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true

[lints]
workspace = true
