[package]
name = "lmt-consensus-core"
description = "Lapis Monetae consensus core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
devnet-prealloc = []
wasm32-sdk = []
default = []

[dependencies]
arc-swap.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
getrandom.workspace = true
itertools.workspace = true
js-sys.workspace = true
lmt-addresses.workspace = true
lmt-core.workspace = true
lmt-hashes.workspace = true
lmt-math.workspace = true
lmt-merkle.workspace = true
lmt-muhash.workspace = true
lmt-txscript-errors.workspace = true
lmt-utils.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
criterion.workspace = true
bincode.workspace = true
wasm-bindgen-test.workspace = true
web-sys.workspace = true

[[bench]]
name = "serde_benchmark"
harness = false

[lints]
workspace = true
