[package]
name = "lmt-consensus-notify"
description = "Lapis Monetae consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
lmt-consensus-core.workspace = true
lmt-core.workspace = true
lmt-hashes.workspace = true
lmt-notify.workspace = true
lmt-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true

[lints]
workspace = true
