[package]
name = "lmt-consensus-wasm"
description = "Lapis Monetae consensus core WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []
wasm32-types = []

[dependencies]
lmt-consensus-core.workspace = true
lmt-consensus-client.workspace = true
lmt-addresses.workspace = true
lmt-txscript.workspace = true
lmt-hashes.workspace = true
lmt-utils.workspace = true

cfg-if.workspace = true
faster-hex.workspace = true
js-sys.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true

workflow-wasm.workspace = true
workflow-log.workspace = true

[lints]
workspace = true
