[package]
name = "lmt-merkle"
description = "Lapis Monetae merkle tree library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lmt-hashes.workspace = true

[lints]
workspace = true
