[package]
name = "lmt-index-processor"
description = "Lapis Monetae index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lmt-consensus-core.workspace = true
lmt-consensus-notify.workspace = true
lmt-consensusmanager.workspace = true
lmt-core.workspace = true
lmt-database.workspace = true
lmt-hashes.workspace = true
lmt-index-core.workspace = true
lmt-notify.workspace = true
lmt-utils.workspace = true
lmt-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
lmt-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}

[lints]
workspace = true