[package]
name = "lmt-utxoindex"
description = "Lapis Monetae UTXO index"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
lmt-consensus-core.workspace = true
lmt-consensusmanager.workspace = true
lmt-core.workspace = true
lmt-database.workspace = true
lmt-hashes.workspace = true
lmt-index-core.workspace = true
lmt-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
lmt-consensus.workspace = true
rand = { workspace = true, features = ["small_rng"] }

[lints]
workspace = true
