[package]
name = "lmt-p2p-flows"
description = "Lapis Monetae p2p flows"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lmt-core.workspace = true
lmt-consensus-core.workspace = true
lmt-consensus-notify.workspace = true
lmt-p2p-lib.workspace = true
lmt-p2p-mining.workspace = true
lmt-utils.workspace = true
lmt-utils-tower.workspace = true
lmt-hashes.workspace = true
lmt-muhash.workspace = true
lmt-connectionmanager.workspace = true
lmt-addressmanager.workspace = true
lmt-consensusmanager.workspace = true
lmt-mining.workspace = true
lmt-notify.workspace = true

async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
chrono.workspace = true

[lints]
workspace = true
