[package]
name = "lmt-p2p-mining"
description = "Lapis Monetae p2p mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lmt-core.workspace = true
lmt-consensus-core.workspace = true
lmt-consensusmanager.workspace = true
lmt-mining-errors.workspace = true
lmt-hashes.workspace = true
lmt-math.workspace = true
lmt-p2p-lib.workspace = true
lmt-utils.workspace = true
lmt-utils-tower.workspace = true
log.workspace = true
tokio.workspace = true

[lints]
workspace = true
