[package]
name = "lmt-rpc-core"
description = "Lapis Monetae RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "lmt-consensus-client/wasm32-sdk",
    "lmt-consensus-wasm/wasm32-sdk"
]

[dependencies]
lmt-addresses.workspace = true
lmt-consensus-core.workspace = true
lmt-consensus-client.workspace = true
lmt-consensus-notify.workspace = true
lmt-consensus-wasm.workspace = true
lmt-core.workspace = true
lmt-hashes.workspace = true
lmt-index-core.workspace = true
lmt-math.workspace = true
lmt-mining-errors.workspace = true
lmt-notify.workspace = true
lmt-txscript.workspace = true
lmt-utils.workspace = true
lmt-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
