[package]
name = "lmt-rpc-service"
description = "Lapis Monetae RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lmt-addresses.workspace = true
lmt-consensus-core.workspace = true
lmt-consensus-notify.workspace = true
lmt-consensusmanager.workspace = true
lmt-core.workspace = true
lmt-hashes.workspace = true
lmt-index-core.workspace = true
lmt-math.workspace = true
lmt-mining.workspace = true
lmt-notify.workspace = true
lmt-p2p-flows.workspace = true
lmt-p2p-lib.workspace = true
lmt-p2p-mining.workspace = true
lmt-perf-monitor.workspace = true
lmt-rpc-core.workspace = true
lmt-txscript.workspace = true
lmt-utils.workspace = true
lmt-utils-tower.workspace = true
lmt-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true

[lints]
workspace = true