[package]
name = "lmt-testing-integration"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lmt-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first

lmt-addresses.workspace = true
lmt-bip32.workspace = true
lmt-consensus-core.workspace = true
lmt-consensus-notify.workspace = true
lmt-consensus.workspace = true
lmt-consensusmanager.workspace = true
lmt-core.workspace = true
lmt-database.workspace = true
lmt-grpc-client.workspace = true
lmt-grpc-core.workspace = true
lmt-grpc-server.workspace = true
lmt-hashes.workspace = true
lmt-index-processor.workspace = true
lmt-math.workspace = true
lmt-merkle.workspace = true
lmt-muhash.workspace = true
lmt-notify.workspace = true
lmt-pow.workspace = true
lmt-rpc-core.workspace = true
lmt-rpc-service.workspace = true
lmt-txscript.workspace = true
lmt-utils.workspace = true
lmt-utxoindex.workspace = true
lmt-wrpc-server.workspace = true
lmtd.workspace = true

async-channel.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
dhat = { workspace = true, optional = true }
faster-hex.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-perf-monitor.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "macros", "process"] }
lmt-txscript-errors.workspace = true

[features]
heap = ["dhat"]
html_reports = []
devnet-prealloc = ["lmtd/devnet-prealloc"]

[lints]
workspace = true
