[package]
name = "lmt-grpc-server"
description = "Lapis Monetae gRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lmt-consensus-core.workspace = true
lmt-core.workspace = true
lmt-grpc-core.workspace = true
lmt-notify.workspace = true
lmt-rpc-core.workspace = true
lmt-rpc-macros.workspace = true
lmt-rpc-service.workspace = true
lmt-utils-tower.workspace = true
lmt-utils.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["gzip"] }
triggered.workspace = true
uuid.workspace = true
rustls.workspace = true

[dev-dependencies]
lmt-grpc-client.workspace = true

[lints]
workspace = true
