[package]
name = "lmt-wrpc-proxy"
description = "Lapis Monetae wRPC to gRPC proxy"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
lmt-consensus-core.workspace = true
lmt-grpc-client.workspace = true
lmt-rpc-core.workspace = true
lmt-rpc-macros.workspace = true
lmt-wrpc-server.workspace = true
num_cpus.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true

[package.metadata.emanate.build]
folder = "setup"

[lints]
workspace = true
